Various fixes; see description
- Fixed deleting a model part disallowing further updates for the Resource Pack Creator
- Fixed large tile component hover and disabled colours for the Resource Pack Creator
- Fixed scrolling text not showing on vehicles

--- a/buildSrc/src/main/resources/website/src/app/component/large-button/large-tile.component.css
+++ b/buildSrc/src/main/resources/website/src/app/component/large-button/large-tile.component.css
@@ -17,9 +17,9 @@
 }
 
 .clickable:hover {
-	background-color: var(--mat-option-hover-state-layer-color);
+	background-color: #7F7F7F22;
 }
 
 .square.disabled {
-	color: var(--mdc-icon-button-disabled-icon-color);
+	color: #7F7F7F7F;
 }
